# System-Monitor

./: CMakeLists.txt  CONTRIBUTIONS.md  README.md  system_monitor.conf
include/: battery_monitor.h  config.h  display.h  gpu_monitor.h  logger.h  network_monitor.h  process_monitor.h  process_monitor_thread.h  system_monitor.h
src/: battery_monitor.cpp  config.cpp  display.cpp  gpu_monitor.cpp  logger.cpp  main.cpp  network_monitor.cpp  process_monitor.cpp  process_monitor_thread.cpp  system_monitor.cpp
